# Vita-V2

./: .gitignore  Cargo.toml  TODO.md  package.json
.husky/: commit-msg  pre-commit
res/models/cube/: model.mtl
res/shaders/: debug.wgsl  default.wgsl  light.wgsl  no_light.wgsl  orthographic.wgsl  perspective.wgsl
src/: chroma_shader.wgsl  main.rs  model.rs  shader.wgsl  texture.rs
src/lib/: helpers.rs  instance.rs  lib.rs  mod.rs
src/lib/object/: mod.rs  model.rs  texture.rs
src/lib/state/: camera.rs  mod.rs  texture.rs
src/state/: camera.rs  instance.rs  light.rs  mod.rs  model.rs
